# mac-identifier

./: .gitignore  main.py  pyproject.toml
db/: csv.py
tests/: conftest.py
tests/db/: test_csv.py
